--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Meu Primeiro Site</title>
   </head>
   <body>
-    <h1>Olá, mundo!</h1>
-    <p>Este é meu primeiro sire publicado com GitHub Pages.</p>
+    <h1>Site criado no VS code!</h1>
+    <p>Editado localmente e enviado manualmente para o GitHub.</p>
   </body>
 </html>
